--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,9 +1,15 @@
 server:
-  port: 8080
+  port: 8021
 
 spring:
   application:
     name: user-service
+
+  profiles:
+    active: local
+  liquibase:
+        enabled: true
+        change-log: classpath:db/changelog.xml
 
 eureka:
   client:
